--- a/thank.html
+++ b/thank.html
@@ -31,8 +31,7 @@
                     </div>
                 </div>
                 <div class="position-relative flex-column d-flex align-items-center justify-content-center">
-                    <p>Бесплатный <br>
-                        вебинар</p>
+                    <p>Бесплатный <br>вебинар</p>
                     <img class="position-absolute" src="img/free.png" alt="">
                 </div>
             </div>
