--- a/thank.html
+++ b/thank.html
@@ -35,22 +35,37 @@
                     <img class="position-absolute" src="img/free.png" alt="">
                 </div>
             </div>
-            <div class="d-flex header-bottom">
+            <div class="d-flex header-tnx">
                 <div>
-                    <h1><span>Как собственнику бизнеса</span><br>
-                        удвоить <img src="img/ruble.png" alt=""> личный доход<br>
-                        за следующие 4 месяца,</h1>
-                    <p>автоматизировав найм, обучение<br>
-                            и масштабирование отдела продаж?</p>
-                    <button class="button">Зарегистрироваться на вебинар<br>
-                            БЕСПЛАТНО <span>+ получить подарок</span></button>
+                    <h1><span>Поздравляем! <br>Вы зарегистрированы<br>на мастер-класс!</span></h1>
+                    <p>Выберите любимый мессенджер,<br>
+                        в который придёт подарок за регистрацию:</p>
+                    <div class="d-flex align-items-center b1 position-relative">
+                        <div>
+                            <img src="img/ipad_mini.png" alt="">
+                        </div>
+                            <p>план масштабирования<br>
+                                и автоматизации отдела продаж</p>
+                        <div class="position-absolute liine">
+                            <img src="img/line2.png" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="block3 d-flex justify-content-center align-items-center">
+                            <div class="d-flex justify-content-center align-items-center position-relative core2">
+                                <a class="btn tg d-flex justify-content-center align-items-center" href="#"><img src="img/tg.png" alt="">Telegram</a>
+                                <a class="btn vk d-flex justify-content-center align-items-center" href="#"><img src="img/vk.png" alt="">Вконтакте</a>
+                                <a class="btn face d-flex justify-content-center align-items-center" href="#"><img src="img/fb.png" alt="">Facebook</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex position-relative">
                     <div>
-                        <img class="position-absolute man" src="img/man.png" alt="">
+                        <img class="position-absolute tnx-man" src="img/man.png" alt="">
                     </div>
                     <div>
-                        <img class="position-absolute name" src="img/speaker.png" alt="">
+                        <img class="position-absolute tnx-name" src="img/speaker.png" alt="">
                     </div>
                 </div>
             </div>
