--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                             и масштабирование отдела продаж?</p>
                     <button class="button">Зарегистрироваться на вебинар<br>
                             БЕСПЛАТНО <span>+ получить подарок</span></button>
+                            <div class="position-relative">
+                                <img class="position-absolute line" src="img/line3.png" alt="">
+                            </div>
                 </div>
                 <div class="d-flex position-relative">
                     <div>
