--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
                         за следующие 4 месяца,</h1>
                     <p>автоматизировав найм, обучение<br>
                             и масштабирование отдела продаж?</p>
-                    <button class="button">Зарегистрироваться на вебинар<br>
+                            <div class="button_s">
+                                 <button class="button">Зарегистрироваться на вебинар<br>
                             БЕСПЛАТНО <span>+ получить подарок</span></button>
-                            <div class="position-relative">
+                            </div>
+                            <div class="position-relative none_m">
                                 <img class="position-absolute line" src="img/line3.png" alt="">
                             </div>
                 </div>
-                <div class="d-flex position-relative">
+                <div class="d-flex position-relative none_m">
                     <div>
                         <img class="position-absolute man" src="img/man.png" alt="">
                     </div>
@@ -64,8 +66,8 @@
         <div class="container">
             <h2>За 2 часа на мастер-классе <span>вы узнаете, как:</span></h2>
             <div class="d-flex flex-column">
-                <div class="d-flex justify-content-between">
-                    <div class="d-flex div1">
+                <div class="d-flex justify-content-between column_m">
+                    <div class="d-flex div1 div11">
                         <div>
                             <img src="img/icon1.png" alt="">
                         </div>
@@ -76,7 +78,7 @@
                                 затраты</span> на их обучение и адаптацию</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex div11">
                         <div>
                             <img src="img/icon2.png" alt="">
                         </div>
@@ -88,8 +90,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-between">
-                    <div class="d-flex">
+                <div class="d-flex justify-content-between column_m">
+                    <div class="d-flex div11">
                         <div>
                             <img src="img/icon3.png" alt="">
                         </div>
@@ -100,7 +102,7 @@
                                 с руководящего звена</p>
                         </div>
                     </div>
-                    <div class="d-flex stul">
+                    <div class="d-flex stul div11">
                         <div>
                             <img src="img/icon4.png" alt="">
                         </div>
@@ -117,7 +119,7 @@
     </section>
     <section class="feedback">
         <div class="container">
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end form-center">
                 <div class="right-form position-relative">
                     <div class="block">
                         <div class="container-form">
@@ -137,8 +139,10 @@
                                         <label for="email">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
                                         <input id="email" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
                                     </div>
-                                    <button class="form-button button">Зарегистрироваться на вебинар<br>
+                                    <div class="button_s">
+                                        <button class="form-button button">Зарегистрироваться на вебинар<br>
                                         БЕСПЛАТНО <span>+ получить подарок</span></button>
+                                    </div>
                                     <div class="accept d-flex justify-content-center align-items-center">
                                         <input type="checkbox" id="linkDa"/><label for="linkDa">Я принимаю <a href="#">условия передачи информации</a></label>
                                     </div>
@@ -153,8 +157,8 @@
     <section class="for_you">
         <div class="container">
             <h2><span>Вебинар для вас, если:</span></h2>
-            <div class="d-flex align-items-center justify-content-between">
-                <div class="d-flex flex-column">
+            <div class="d-flex align-items-center justify-content-between column_m">
+                <div class="d-flex flex-column block22">
                     <div>
                         <img src="img/icon_1.png" alt="">
                     </div>
@@ -177,7 +181,7 @@
                                 временных затрат</p>
                         </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column block222">
                         <div>
                             <img src="img/icon_3.png" alt="">
                         </div>
@@ -195,7 +199,7 @@
     <section class="inside">
         <div class="container">
             <h2><span>Внедрив знания</span> с вебинара вы:</h2>
-            <div class="row d-flex justify-content-center align-items-center">
+            <div class="row d-flex justify-content-center align-items-center space_m">
                 <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
                     <div>
                         <img src="img/img1.png" alt="">
@@ -232,7 +236,7 @@
                         и вводить в должность ЛЮБОЕ<br>
                         количество менеджеров</p>
                 </div>
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center move1">
                     <div>
                         <img src="img/img5.png" alt="">
                     </div>
@@ -255,8 +259,8 @@
             <h2>Посмотрите, какие <span>результаты<br>
                 уже получили компании</span></h2>
             <h5>после внедрения всех знаний</h5>
-            <div class="row">
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center d1">
+            <div class="row column_m center_m">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center d1 d2">
                     <div>   
                         <img src="img/ecocomplect.png" alt="">
                     </div>
@@ -264,7 +268,7 @@
                         всех тренеров по продажам,<span>сэкономив<br>
                         более 2 400 000 руб. по году</span></p>
                 </div>
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center d2">
                     <div>   
                         <img src="img/vernoe.png" alt="">
                     </div>
@@ -277,7 +281,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center d2">
                     <div>   
                         <img src="img/goodhim.png" alt="">
                     </div>
@@ -334,7 +338,7 @@
     </section>
     <section class="feedback">
         <div class="container">
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end form-center">
                 <div class="right-form position-relative">
                     <div class="block">
                         <div class="container-form">
@@ -354,8 +358,10 @@
                                         <label for="email">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
                                         <input id="email" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
                                     </div>
-                                    <button class="form-button button">Зарегистрироваться на вебинар<br>
+                                    <div class="button_s">
+                                        <button class="form-button button">Зарегистрироваться на вебинар<br>
                                         БЕСПЛАТНО <span>+ получить подарок</span></button>
+                                    </div>
                                     <div class="accept d-flex justify-content-center align-items-center">
                                         <input type="checkbox" id="linkDa"/><label for="linkDa">Я принимаю <a href="#">условия передачи информации</a></label>
                                     </div>
