--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <img class="position-absolute line" src="img/line3.png" alt="">
                             </div>
                 </div>
-                <div class="d-flex position-relative none_m">
+                <div class="d-flex position-relative">
                     <div>
                         <img class="position-absolute man" src="img/man.png" alt="">
                     </div>
