--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -44,7 +44,7 @@
                     <p>автоматизировав найм, обучение<br>
                             и масштабирование отдела продаж?</p>
                             <div class="button_s">
-                                 <button class="button">Зарегистрироваться на вебинар<br>
+                                 <button class="button btn btn-primary" data-toggle="modal" data-target="#exampleModal">Зарегистрироваться на вебинар<br>
                             БЕСПЛАТНО <span>+ получить подарок</span></button>
                             </div>
                             <div class="position-relative none_m">
@@ -135,16 +135,19 @@
                                     <div class="form-label-group">
                                         <label for="phone">Введите телефон для получения<br>СМС о начале вебинара</label>
                                         <input id="phone" type="tel" class="form-control" name="phone" placeholder="+7 (___) ___-__-_" required="">
+                                    </div>
                                     <div class="form-label-group">
                                         <label for="email">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
                                         <input id="email" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
                                     </div>
+                                    <div id="cerror"></div>
                                     <div class="button_s">
-                                        <button class="form-button button">Зарегистрироваться на вебинар<br>
+                                        <button class="form-button button btn btn-primary" onclick="doLoad(document.getElementById('addcom'))">Зарегистрироваться на вебинар<br>
                                         БЕСПЛАТНО <span>+ получить подарок</span></button>
                                     </div>
-                                    <div class="accept d-flex justify-content-center align-items-center">
-                                        <input type="checkbox" id="linkDa"/><label for="linkDa">Я принимаю <a href="#">условия передачи информации</a></label>
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" checked="" id="exampleCheck16">
+                                        <label class="form-check-label" for="exampleCheck16">Я принимаю <a data-toggle="modal" data-target="#exampleModal3">условия передачи данных</a></label>
                                     </div>
                                 </form>
                             </div>
@@ -230,7 +233,7 @@
                     <div>
                         <img src="img/img4.png" alt="">
                     </div>
-                    <h4>сможете быстро<br>масштабировать отдел продаж</h4>
+                    <h4>сможете быстро<br> масштабировать отдел продаж</h4>
                     <p>благодаря возможности за короткий<br>
                         срок автоматизированно обучать<br>
                         и вводить в должность ЛЮБОЕ<br>
@@ -248,7 +251,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <button class="button">Зарегистрироваться на вебинар<br>
+                <button class="button btn btn-primary" data-toggle="modal" data-target="#exampleModal">Зарегистрироваться на вебинар<br>
                     БЕСПЛАТНО <span>+ получить подарок</span></button>
             </div>
             
@@ -276,7 +279,7 @@
                         автоматизировав обучение менеджеров<br>
                         и быстро масштабировав отдел продаж</p>
                     <div class="vid1">
-                        <a data-fancybox="gallery" href="#">
+                        <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=8m9AWnwTgAM&feature=emb_logo">
                               <img src="img/play.png" alt=""> Смотреть видео-отзыв
                         </a>
                     </div>
@@ -289,14 +292,14 @@
                         разделением функций и <span>полноценным<br>
                         обучением всем продуктам компании</span></p>
                     <div class="vid1">
-                        <a data-fancybox="gallery" href="#">
+                        <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=JQceyz7f2Lk&feature=emb_logo">
                             <img src="img/play.png" alt=""> Смотреть видео-отзыв
                         </a>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <button class="button">Зарегистрироваться на вебинар<br>
+                <button class="button btn btn-primary" data-toggle="modal" data-target="#exampleModal">Зарегистрироваться на вебинар<br>
                 БЕСПЛАТНО <span>+ получить подарок</span></button>
             </div>
         </div>
@@ -304,7 +307,13 @@
     <section class="on_air">
         <div class="container">
             <h2>Вебинар ведет<br><span>Александр Мамичев —</span></h2>
-            <h4>Основатель компании по автоматизации <br>бучения в отделе продаж</h4>
+            <h4 class="hidden-m">Основатель компании по автоматизации <br>обучения в отделе продаж</h4>
+            <div class="visible-m d-flex justify-content-center align-items-center">
+                <h4>Основатель компании по автоматизации <br>обучения в отделе продаж</h4>
+                <div>
+                    <img src="img/krug.png" alt="">
+                </div>
+            </div>
             <div class="d-flex flex-column core">
                 <div class="d-flex align-items-center">
                     <div>
@@ -350,20 +359,23 @@
                                     и автоматизации отдела продаж в подарок!</span></p>
                             </div>
                             <div class="cooperation-form">
-                                <form class="needs-validation main-form" novalidate="" method="POST" action="#" enctype="multipart/form-data" name="addcom" id="addcom" onsubmit="return false">
+                                <form class="needs-validation main-form" novalidate="" method="POST" action="#" enctype="multipart/form-data" name="addcom2" id="addcom2" onsubmit="return false">
                                     <div class="form-label-group">
-                                        <label for="phone">Введите телефон для получения<br>СМС о начале вебинара</label>
-                                        <input id="phone" type="tel" class="form-control" name="phone" placeholder="+7 (___) ___-__-_" required="">
-                                    <div class="form-label-group">
-                                        <label for="email">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
-                                        <input id="email" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
+                                        <label for="phone2">Введите телефон для получения<br>СМС о начале вебинара</label>
+                                        <input id="phone2" type="tel" class="form-control" name="phone" placeholder="+7 (___) ___-__-_" required="">
                                     </div>
+                                    <div class="form-label-group">
+                                        <label for="email2">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
+                                        <input id="email2" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
+                                    </div>
+                                    <div id="cerror2"></div>
                                     <div class="button_s">
-                                        <button class="form-button button">Зарегистрироваться на вебинар<br>
+                                        <button class="form-button button btn btn-primary" onclick="doLoad2(document.getElementById('addcom2'))">Зарегистрироваться на вебинар<br>
                                         БЕСПЛАТНО <span>+ получить подарок</span></button>
                                     </div>
-                                    <div class="accept d-flex justify-content-center align-items-center">
-                                        <input type="checkbox" id="linkDa"/><label for="linkDa">Я принимаю <a href="#">условия передачи информации</a></label>
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" checked="" id="exampleCheck17">
+                                        <label class="form-check-label" for="exampleCheck17">Я принимаю <a data-toggle="modal" data-target="#exampleModal3">условия передачи данных</a></label>
                                     </div>
                                 </form>
                             </div>
@@ -373,13 +385,94 @@
             </div>
         </div>
     </section>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <!--<div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>-->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <img class="hidden-xs" src="img/close.svg" alt="">
+                <img class="visible-xs" src="img/close_b.svg" alt="">
+            </button>
+            <div class="modal_m">
+                <div class="block modal-body">
+                    <div class="container-form">
+                        <div>
+                            <h2>Заполните форму ниже,</h2>
+                            <p>чтобы зарегистрироваться<br>
+                                на вебинар <span>БЕСПЛАТНО</span></p>
+                            <p><span>+ получить план масштабирования<br>
+                                и автоматизации отдела продаж в подарок!</span></p>
+                        </div>
+                        <div class="cooperation-form">
+                            <form class="needs-validation main-form" novalidate="" method="POST" action="#" enctype="multipart/form-data" name="addcom3" id="addcom3" onsubmit="return false">
+                                    <div class="form-label-group">
+                                        <label for="phone3">Введите телефон для получения<br>СМС о начале вебинара</label>
+                                        <input id="phone3" type="tel" class="form-control" name="phone" placeholder="+7 (___) ___-__-_" required="">
+                                    </div>
+                                    <div class="form-label-group">
+                                        <label for="email3">Введите почту, чтобы получить<br>план масштабирования ОП в подарок</label>
+                                        <input id="email3" type="email" class="form-control" name="email" placeholder="mail@mail.ru" required="">       
+                                    </div>
+                                    <div id="cerror3"></div>
+                                    <div class="button_s">
+                                        <button class="form-button button btn btn-primary" onclick="doLoad3(document.getElementById('addcom3'))">Зарегистрироваться на вебинар<br>
+                                        БЕСПЛАТНО <span>+ получить подарок</span></button>
+                                    </div>
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" checked="" id="exampleCheck16">
+                                        <label class="form-check-label" for="exampleCheck16">Я принимаю <a data-toggle="modal" data-target="#exampleModal3">условия передачи данных</a></label>
+                                    </div>
+                                </form>
+                    </div>
+                </div>
+            </div>
+            
+            <!--<div class="modal-footer">
+            </div>-->
+          </div>
+        </div>
+      </div>
+     </div>
+     <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog modal-dialog2 modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-body modal-body2">
+                    <button type="button" class="close close2" data-dismiss="modal" aria-label="Close">
+                        <img class="hidden-xs" src="img/close.svg" alt="">
+                        <img class="visible-xs" src="img/close_b.svg" alt="">
+                    </button>
+                    <h3 class="text-center mt-5"><strong>Политика конфиденциальности</strong></h3>
+                    <div class="text pb-5 pl-5 pr-5">
+                        Администрация данного Сайта не&nbsp;может передать или раскрыть информацию предоставленную пользователем (далее Пользователь) при регистрации и&nbsp;использовании функций сайта третьим лицам, кроме случаев, описанных законодательством страны, на&nbsp;территории которой пользователь ведет свою деятельность.
+                        <br><br>
+                        Для регистрации на&nbsp;сайте, пользователь обязан внести некоторую персональную информацию. Для проверки предоставленных данных, сайт оставляет за&nbsp;собой право потребовать доказательства идентичности в&nbsp;онлайн или офлайн режимах.
+                        <br><br>
+                        Сайт использует личную информацию Пользователя для обслуживания и&nbsp;для улучшения качества предоставляемых услуг. Часть персональной информации может быть предоставлена банку или платежной системе, в&nbsp;случае, если предоставление этой информации обусловлено процедурой перевода средств платежной системе, услугами которой Пользователь желает воспользоваться.
+                        <br><br>
+                        Сайт прилагает все усилия для сбережения в&nbsp;сохранности личных данных Пользователя.
+                        Личная информация может быть раскрыта в&nbsp;случаях, описанных законодательством, либо
+                        когда администрация сочтет подобные действия необходимыми для соблюдения юридической процедуры, судебного распоряжения или легального процесса необходимого для работы Пользователя с&nbsp;Сайтом.
+                        <br><br>
+                        В&nbsp;других случаях, ни&nbsp;при каких условиях, информация, которую Пользователь передает Сайту, не&nbsp;будет раскрыта третьим лицам.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script defer="" src="comm.js"></script>
+    <script defer="" src="JsHttpRequest.js"></script>
+    <script src="js/jquery.maskedinput-1.3.min.js"></script>
     <script src="js/main.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
