--- a/thank.html
+++ b/thank.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="d-flex header-tnx">
-                <div>
+                <div class="vid99">
                     <h1><span>Поздравляем! <br>Вы зарегистрированы<br> на мастер-класс!</span></h1>
                     <p>Выберите любимый мессенджер,<br>
                         в который придёт подарок за регистрацию:</p>
@@ -50,7 +50,7 @@
                             <img src="img/line2.png" alt="">
                         </div>
                     </div>
-                    <div>
+                    <div class="wid">
                         <div class="block3 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center position-relative core2">
                                 <a class="btn tg d-flex justify-content-center align-items-center" href="#"><img src="img/tg.png" alt="">Telegram</a>
