--- a/index3.html
+++ b/index3.html
@@ -174,10 +174,10 @@
       <div class="container">
         <div class="d-flex justify-content-end form-center">
           <div class="right-form position-relative">
-            <div class="block">
+            <div class="block block_tg_wp">
               <div class="container-form">
                 <div>
-                  <h2>Заполните форму ниже,</h2>
+                  <h2>Нажмите на кнопку,</h2>
                   <p>
                     чтобы зарегистрироваться<br />
                     на вебинар <span>БЕСПЛАТНО</span>
@@ -189,71 +189,9 @@
                     >
                   </p>
                 </div>
-                <div class="cooperation-form">
-                  <form
-                    class="needs-validation main-form"
-                    novalidate=""
-                    method="POST"
-                    action="#"
-                    enctype="multipart/form-data"
-                    name="addcom"
-                    id="addcom"
-                    onsubmit="return false"
-                  >
-                    <div class="form-label-group">
-                      <label for="phone"
-                        >Введите телефон для получения<br />СМС о начале
-                        вебинара</label
-                      >
-                      <input
-                        id="phone"
-                        type="tel"
-                        class="form-control"
-                        name="phone"
-                        placeholder="+7 (___) ___-__-_"
-                        required=""
-                      />
-                    </div>
-                    <div class="form-label-group">
-                      <label for="email"
-                        >Введите почту, чтобы получить<br />план масштабирования
-                        ОП в подарок</label
-                      >
-                      <input
-                        id="email"
-                        type="email"
-                        class="form-control"
-                        name="email"
-                        placeholder="mail@mail.ru"
-                        required=""
-                      />
-                    </div>
-                    <div id="cerror"></div>
-                    <div class="button_s">
-                      <button
-                        class="form-button button btn btn-primary"
-                        onclick="doLoad(document.getElementById('addcom'))"
-                      >
-                        Зарегистрироваться на вебинар<br />
-                        БЕСПЛАТНО <span>+ получить подарок</span>
-                      </button>
-                    </div>
-                    <div class="form-check">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        checked=""
-                        id="exampleCheck16"
-                      />
-                      <label class="form-check-label" for="exampleCheck16"
-                        >Я принимаю
-                        <a data-toggle="modal" data-target="#exampleModal3"
-                          >условия передачи данных</a
-                        ></label
-                      >
-                    </div>
-                  </form>
-                </div>
+              </div>
+              <div class="dop_block d-flex justify-content-center align-items-center">
+                 <a class="btn whatss d-flex justify-content-center align-items-center" href="#"><img src="img/whatsapp.png" alt="">WHATSAPP</a>
               </div>
             </div>
           </div>
@@ -548,10 +486,10 @@
       <div class="container">
         <div class="d-flex justify-content-end form-center">
           <div class="right-form position-relative">
-            <div class="block">
+            <div class="block block_tg_wp">
               <div class="container-form">
                 <div>
-                  <h2>Заполните форму ниже,</h2>
+                  <h2>Нажмите на кнопку,</h2>
                   <p>
                     чтобы зарегистрироваться<br />
                     на вебинар <span>БЕСПЛАТНО</span>
@@ -563,71 +501,9 @@
                     >
                   </p>
                 </div>
-                <div class="cooperation-form">
-                  <form
-                    class="needs-validation main-form"
-                    novalidate=""
-                    method="POST"
-                    action="#"
-                    enctype="multipart/form-data"
-                    name="addcom2"
-                    id="addcom2"
-                    onsubmit="return false"
-                  >
-                    <div class="form-label-group">
-                      <label for="phone2"
-                        >Введите телефон для получения<br />СМС о начале
-                        вебинара</label
-                      >
-                      <input
-                        id="phone2"
-                        type="tel"
-                        class="form-control"
-                        name="phone"
-                        placeholder="+7 (___) ___-__-_"
-                        required=""
-                      />
-                    </div>
-                    <div class="form-label-group">
-                      <label for="email2"
-                        >Введите почту, чтобы получить<br />план масштабирования
-                        ОП в подарок</label
-                      >
-                      <input
-                        id="email2"
-                        type="email"
-                        class="form-control"
-                        name="email"
-                        placeholder="mail@mail.ru"
-                        required=""
-                      />
-                    </div>
-                    <div id="cerror2"></div>
-                    <div class="button_s">
-                      <button
-                        class="form-button button btn btn-primary"
-                        onclick="doLoad2(document.getElementById('addcom2'))"
-                      >
-                        Зарегистрироваться на вебинар<br />
-                        БЕСПЛАТНО <span>+ получить подарок</span>
-                      </button>
-                    </div>
-                    <div class="form-check">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        checked=""
-                        id="exampleCheck17"
-                      />
-                      <label class="form-check-label" for="exampleCheck17"
-                        >Я принимаю
-                        <a data-toggle="modal" data-target="#exampleModal3"
-                          >условия передачи данных</a
-                        ></label
-                      >
-                    </div>
-                  </form>
-                </div>
+              </div>
+              <div class="dop_block d-flex justify-content-center align-items-center">
+                <a class="btn tg d-flex justify-content-center align-items-center" href="#"><img src="img/tg.png" alt="">Telegram</a>
               </div>
             </div>
           </div>
